# detection-of-personal-data

./: .dockerignore  .flake8  .gitignore  .releaserc.yml  Classification.ipynb  Courbe_Roc.ipynb  Dockerfile  MyFunctions.py  README.md  first_dl_algo.ipynb  labeling.ipynb  labeling_notranslate.ipynb  personal_data_db.xlsx  project_ideas.md  pyproject.toml  test_fr_en.csv  trad.py  translator.py
.github/workflows/: build.yml  lint.yml  publish-pr.yml  publish.yml  release.yml  test.yml
data_test/: Franklin_afterProcess.csv  SteveJobs.csv  SteveJobs_afterProcess.csv  madonna_afterProcess.csv  personal_data_db.xlsx  personal_data_db_translated.csv  result_no_match.csv  sheet_test.txt_result.json  test.txt  test_file_translated
out_dir/: sheet_test_file_translated_result.json
src/: classification.ipynb  data.json  functions.py  main.py  pii.py  pii_translator.py  predict_pii.py  test.ipynb  test_file_small_sample.csv  test_pii.py  trad.py  translator.py
src/detection_of_personal_data/: functions.py  main.py
src/pii_detect/: functions.py  main.py
tests/: test_cli.py  test_pii.py  utils.py
tests/data/inputs_test/: test_1  test_2  test_3.csv
tests/data/ref_outputs/: sheet_test_1_result.json  sheet_test_2_result.json  sheet_test_3_result.json
