[tool.poetry]
name = "detection-of-personal-data"
version = "0.1.0"
description = "Detection of personal data"
authors = ["opensource-OKP4 <opensource@okp4.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
common_regex = "^1.0.2"
tqdm = "^4.64.1"
flake8 = "^4.0.1"
torch = "^1.13.0"
transformers = "^4.25.1"
nltk = "^3.7"
black = "^22.12.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.semantic_release]
version_variable = [
    "detection_of_personal_data/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.scripts]
detection-of-personal-data = "detection_of_personal_data.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
