[tool.poetry]
name = "detection-of-personal-data"
version = "0.1.0"
description = "Detection of personal data"
authors = ["opensource-OKP4 <opensource@okp4.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
common-regex = "^1.0.2"
nltk = "^3.8"
transformers = "^4.35.0"
torch = "1.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
click = "^8.1.3"
flake8-bugbear = "^23.11.26"
mypy = "^0.991"
pytest-cov = "^4.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detection-of-personal-data = "detection_of_personal_data.main:cli"